# gx-interface-validator

./: .gitattributes  .gitignore  README.md  conftest.py  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: ci.yml
data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 13ad6994bfe34640.txt  17c0acb99d4fffaa.txt  18771e4699786d7b.txt  18a28c0ac75ef601.txt  196da61a0eefa41e.txt  20ff36c793df0bd8.txt  21da4d6413dabbb.txt  22be903a23e20191.html  24f53094df7282c2.txt  269758b586058400.txt  28054cf3a65a5246.txt  2839bb9f13c89f16.html  2cb13d630ca72ea8.txt  2f1c4dfa4573a833.txt  32353e1b7d339f65.txt  (+113 more)
docs/: GUIA.md
examples/: Informe_SAMPLE01_20250402.html  Informe_SAMPLE01_20250404.html  Informe_SAMPLE02_20250404.html  README.md  resultado.SAMPLE01.20250402.json  resultado.SAMPLE01.20250404.json  resultado.SAMPLE02.20250404.json
expectations/: sample01_body.json  sample01_footer.json  sample01_header.json  sample02_body.json  sample02_footer.json  sample02_header.json  sample04_body.json  sample04_footer.json  sample04_header.json
export/: influxDbData.txt  prometheusData.txt
features/: interface_validation.feature
history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
scripts/: generate_sample_data.py  setup_metabase.py
tests/: test_catalog.py  test_comparison.py  test_consolidator.py  test_delimited.py  test_engine.py  test_etl.py  test_html_report.py  test_parser.py  test_pdf.py  test_project_report.py  test_sample02.py
widgets/: duration-trend.json  duration.json  history-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+202 files in other folders)
